<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/contact_us_id"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/contact_us_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="#12245C"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/contact_us_txt_id"
            android:gravity="center">

            <Button
                android:id="@+id/web_id"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/web"
                android:foreground="@drawable/web"
                android:gravity="center" />

            <Button

                android:id="@+id/gmail.id"
                android:layout_width="30dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/web_id"
                android:background="@drawable/gmail"
                android:foreground="@drawable/gmail"
                android:gravity="center" />
        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/share_rate_id"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/share_id"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/share_icon"
            android:foreground="@drawable/share_icon"
            android:gravity="center" />

        <Button
            android:id="@+id/rate_id"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/share_id"
            android:background="@drawable/rate_icon"
            android:foreground="@drawable/rate_icon" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/container_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/color"
                android:textColor="#FF0000"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/code"
                android:textColor="#00FF00"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/generator"
                android:textColor="#0000FF"
                android:textSize="22sp" />

        </LinearLayout>


        <View
            android:id="@+id/v_color"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="#000"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_000"
            android:textIsSelectable="true"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rgb_0_0_0"
            android:textIsSelectable="true"
            android:textSize="22sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/sb_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="255"
            android:progressTint="#FF0000"
            android:thumbTint="#FF0000" />


        <SeekBar
            android:id="@+id/sb_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="255"
            android:progressTint="#00FF00"
            android:thumbTint="#00FF00" />

        <SeekBar
            android:id="@+id/sb_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="255"
            android:progressTint="#0000FF"
            android:thumbTint="#0000FF" />

    </LinearLayout>


    <TextView
        android:id="@+id/poweredby_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_id"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/powered_by_banglabs_txt"
        android:textColor="#0000FF"
        android:textSize="15sp" />


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/real_add_unit_id" />


</RelativeLayout>